Java 16 Switch (And Gradle 7.0)
Support Java 16 with Gradle 7.0.
I do not use anymore the official JavaFX Plugin, but the javafxgradle7plugin (a fork for Java 16 and Gradle 7)